Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gst-plugins-bad gst-plugins-bad
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 973
    • Issues 973
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 105
    • Merge requests 105
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamerGStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #1646
Closed
Open
Issue created Aug 18, 2021 by MaximDanilov@MaximDanilov

mfvideosrc: detects splitcam driver, but can't capture from it (ksvideosrc works fine with that)

Device found:

    name  : SplitCam Video Driver
    class : Source/Video
    caps  : video/x-raw, format=BGR, width=2048, height=1536, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1920, height=1440, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1920, height=1080, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1600, height=1200, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1400, height=1050, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1600, height=900, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1280, height=960, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1280, height=720, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1024, height=768, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=960, height=540, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=800, height=600, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=640, height=480, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=640, height=360, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=512, height=384, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=400, height=300, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=400, height=225, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=320, height=240, framerate=30000/1001, pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=320, height=180, framerate=30000/1001, pixel-aspect-ratio=1/1
    properties:
            device.api = mediafoundation
            device.path = "\\\\\?\\root\#media\#0000\#\{e5323777-f976-4f5b-9b55-b94699c46e44\}\\global"
            device.name = "SplitCam\ Video\ Driver"
    gst-launch-1.0 mfvideosrc device-path="\\\\\?\\root\#media\#0000\#\{e5323777-f976-4f5b-9b55-b94699c46e44\}\\global" ! ...

===================================================================================================================================

Device found:

    name  : SplitCam Virtual Video Driver
    class : Video/Source
    caps  : video/x-raw, format=BGR, width=640, height=480, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=2048, height=1536, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1920, height=1440, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1920, height=1080, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1600, height=1200, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1600, height=900, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1400, height=1050, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1280, height=960, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1280, height=720, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=1024, height=768, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=960, height=540, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=800, height=600, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=640, height=360, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=512, height=384, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=400, height=300, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=400, height=225, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=320, height=240, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
            video/x-raw, format=BGR, width=320, height=180, framerate=[ 0/1, 30/1 ], pixel-aspect-ratio=1/1
    gst-launch-1.0 ksvideosrc device-path="\\\\\?\\root\#media\#0000\#\{6994ad05-93ef-11d0-a3cc-00a0c9223196\}\\global" ! ...
Edited Aug 19, 2021 by Seungha Yang
Assignee
Assign to
Time tracking