sys/mediafoundation/gstmfutils.h
@@ -50,6 +50,9 @@ GstCaps *      gst_mf_media_type_to_caps  (IMFMediaType * media_type);
 
 void           gst_mf_media_type_release  (IMFMediaType * media_type);
 
+gboolean       gst_mf_update_video_info_with_stride (GstVideoInfo * info,
+                                                     gint stride);
+
 gboolean       _gst_mf_result              (HRESULT hr,
                                             GstDebugCategory * cat,
                                             const gchar * file,
